--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -44,4 +44,4 @@ nav > ul > li > a:hover{  color: #FD6E0A;}
 
 .about-description{ font-size: 18px; font-family:'Open Sans', sans-serif; color: #757575; text-align: center; }
 
-.about{ padding: 130px; background-color: #FFF8F3; border: solid black; margin: 130px 0px; }
+.about{ padding: 130px; background-color: #FFF8F3; margin: 130px 0px; }
