--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -59,4 +59,16 @@ main{width: 1140px; margin: auto; }
 
 #id{ padding:30px 150px }
 
+.box{width: 220px; height: 302px; text-align: center; border: 2px solid black; }
+
+.what-i-do{ display: flex; justify-content: space-around;}
+
+.discription-of-what-i-do{ padding: 10px ; }
+
+.btn-1{background-color: #FD6E0A; color: aliceblue; padding: 5px; border-radius: 5px; font-size: 22px; cursor: pointer; border: 0px; margin-right: 30px; margin: auto;}
+.btn-1:hover{ color: rgb(101, 29, 168);}
+
+.title-of-what-i-do{ padding: 10px; /* margin-top: 15px ; */}
+
+.icons{ margin-top: 20px; }
 
