--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -25,7 +25,7 @@ nav > ul > li > a:hover{  color: #FD6E0A;}
 
  /* header section */
 
- .header{ background-color: #FFF8F3; background-image: url(../images/header_bg.png); background-repeat: no-repeat; background-position: bottom right;}
+ .header{ background-color: #FFF8F3; background-image: url(../images/header_bg.png); background-repeat: no-repeat; background-position: bottom right; height: 100vh;}
 
  nav{ margin: 0px 100px;}
 
@@ -45,7 +45,7 @@ nav > ul > li > a:hover{  color: #FD6E0A;}
 main{width: 1140px; margin: auto; }
 
 /* About section */
-.about{ padding: 130px; background-color: #FFF8F3; margin: 120px 0px; }
+.about{ padding: 130px; background-color: #FFF8F3; margin: 120px 0px;}
 
 .about-title{padding: 30px;}
 .about-description{ font-size: 18px; font-family:'Open Sans', sans-serif; color: #757575; text-align: center; }
@@ -59,11 +59,11 @@ main{width: 1140px; margin: auto; }
 
 #id{ padding:30px 150px }
 
-.box{width: 220px; height: 302px; text-align: center; border: 2px solid black; }
+.box{width: 220px; height: 302px; text-align: center; border: 2px solid black; box-shadow: 5px 5px 35px  #da8349 ; }
 
 .what-i-do{ display: flex; justify-content: space-around;}
 
-.discription-of-what-i-do{ padding: 10px ; }
+.description-of-what-i-do{ padding: 10px ; }
 
 .btn-1{background-color: #FD6E0A; color: aliceblue; padding: 5px; border-radius: 5px; font-size: 22px; cursor: pointer; border: 0px; margin-right: 30px; margin: auto;}
 .btn-1:hover{ color: rgb(101, 29, 168);}
@@ -71,4 +71,16 @@ main{width: 1140px; margin: auto; }
 .title-of-what-i-do{ padding: 10px; /* margin-top: 15px ; */}
 
 .icons{ margin-top: 20px; }
+
+/* REsume section */
+
+.resume-parent{ display: flex; /* gap: 40px */; justify-content: center; justify-content: space-around;}
+
+.first-colum{ width: 500px; height: 175px;}
+
+.resume-head{ margin: 5px  0px 15px 0px; color: #383434;}
+.resume-title{color: #352828; font-weight: bold; margin-bottom: 5px; font-family: ; }
+.resume-versity{ margin-bottom: 2px; color: rgb(63, 56, 63);}
+
+.resume-description{ font-weight: 500; margin-bottom: 8px; }
 
