--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -91,9 +91,11 @@ main{width: 1140px; margin: auto; }
 /* footer section */
 
 
-.foot{ display: flex; align-items: center; height: 450px; margin-top: 50px ; border: 2px solid black; background-color: #ecdbcf; padding: 50px;}
+.foot{ display: flex; align-items: center; height: 450px; margin-top: 50px ; border: 2px solid rgb(223, 193, 193); background-color: #ecdbcf; padding: 50px;}
 
 #aling{ margin-left: 660px; margin-right: 50px;  width: 400px;}
+
+
 
 
 
