--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -93,10 +93,7 @@ main{width: 1140px; margin: auto; }
 
 .foot{ display: flex; align-items: center; height: 450px; margin-top: 50px ; border: 2px solid rgb(223, 193, 193); background-color: #ecdbcf; padding: 50px;}
 
-#aling{ margin-left: 660px; margin-right: 50px;  width: 400px;}
-
-
-
+#align{ margin-left: 660px; margin-right: 50px;  width: 400px;}
 
 
 /* .text{ width: 500px; font-size: 20px; } */
